# board-design

./: README.md  docker-compose.local.yaml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: static.yml
backend/: .gitignore  main.py  models.py  pyproject.toml
backend/core/: auth.py  schemas.py  settings.py
backend/modules/board/: router.py
backend/modules/boards/: boards_service.py  router.py  schemas.py
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/public/: 404.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: boards.ts  client.ts
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/boards/: BoardCard.tsx  BoardSkeleton.tsx  BoardsHeader.tsx  CreateBoardModal.tsx  DeleteConfirmModal.tsx  EmptyState.tsx  ErrorState.tsx
frontend/src/components/canvas/: Board.tsx  ImageDecal.tsx  Scene.tsx  (+1 more)
frontend/src/pages/: BoardsPage.tsx  Designer.tsx  SignInPage.tsx  SignUpPage.tsx
frontend/src/store/: useDesignStore.ts
frontend/src/types/: board.ts
frontend/src/utils/: boardMapper.ts
public/models/: snowboard.glb
src/: App.tsx  Experience.tsx  Ground.tsx  index.css  main.tsx
src/assets/stickers/: index.ts
src/components/canvas/: Board.tsx  ElementGizmo.tsx  ImageDecal.tsx  Scene.tsx  StickerDecal.tsx  TextDecal.tsx
src/components/landing/: CallToAction.tsx  Features.tsx  HowItWorks.tsx  StatsBar.tsx
src/components/ui/: LayersPanel.tsx  LibraryPopover.tsx  PropertiesPanel.tsx  Toolbar.tsx
src/pages/: LandingPage.tsx
src/store/: useDesignStore.ts
(+13 files in other folders)
