[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clerk-backend-api>=5.0.2",
    "fastapi[standard]>=0.135.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[tool.fastapi]
entry-point = "main:app"

[tool.ruff]
line-length = 88
select = ["F"]

[tool.ruff.lint]
fixable = ["ALL"]
